--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -34,7 +34,7 @@
         <item quantity="other">odblokowań ekranu dzisiaj.</item>
     </plurals>
 
-    <string name="your_unlock_count_is">Twoja liczba odblokowań to %1$d/%2$d</string>
+    <string name="your_unlock_count_is">Twoja dzisiejsza liczba odblokowań to %1$d/%2$d</string>
     <string name="background_service_notification_channel_title">Sygnalizacja pracy w tle</string>
     <string name="background_service_notification_channel_description">Wyświetla stałe powiadomienie o uruchomionym serwisie w tle</string>
     <string name="welcome_to_unlock_master">Witaj w UnlockMaster!</string>
@@ -86,7 +86,6 @@
     <string name="note_you_can_change_time_of_notifications">Uwaga: zawsze możesz zmienić częstotliwość i czas tych powiadomień w ustawieniach.</string>
     <string name="lets_go">Zaczynajmy!</string>
     <string name="setup_complete">Konfiguracja zakończona</string>
-    <string name="unlock_master_paused">UnlockMaster (wstrzymany)</string>
     <string name="todays_unlock_limit">Dzisiejszy limit odblokowań:</string>
     <string name="set_new">Ustaw nowy</string>
     <string name="update_your_unlock_limit">Zaktualizuj limit odblokowań</string>
@@ -241,6 +240,8 @@
     <string name="you_have_reached_the_lowest_screen_time_limit">Osiągnięto najniższy dostępny limit czasu przed ekranem. Dobra robota!</string>
     <string name="as_your_new_screen_time_limit">jako nowy limit czasu przed ekranem.</string>
 
+    <string name="unlock_count">Liczba odblokowań: %1$d/%2$d</string>
+    <string name="unlock_count_paused">Liczba odblokowań: %1$d/%2$d (wstrzymano)</string>
     <string name="content_description_application_icon">Ikona aplikacji UnlockMaster</string>
     <string name="content_description_back_icon">Ikona strzałki wstecz</string>
     <string name="content_description_guidance_icon">Ikona brzęczącego dzwonka</string>
